# tamacom

./: README.md  pyproject.toml
src/tamacom/: __about__.py  __init__.py  chunk.py  comm.py  enums.py  utils.py
tests/: __init__.py
