[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tamacom"
dynamic = ["version"]
description = 'Tamagotchi Paradise Communication Library'
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
keywords = []
authors = [
  { name = "cyanic", email = "yukaili.geek@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pyserial>=3.5",
  "crc>=7.1.0",
]

[project.urls]
Documentation = "https://github.com/GMMan/tamacom#readme"
Issues = "https://github.com/GMMan/tamacom/issues"
Source = "https://github.com/GMMan/tamacom"

[tool.hatch.version]
path = "src/tamacom/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/tamacom tests}"

[tool.coverage.run]
source_pkgs = ["tamacom", "tests"]
branch = true
parallel = true
omit = [
  "src/tamacom/__about__.py",
]

[tool.coverage.paths]
tamacom = ["src/tamacom", "*/tamacom/src/tamacom"]
tests = ["tests", "*/tamacom/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
